<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>flexbe_synthesis_demo_msgs</name>
    <version>1.0.0</version>
    <description>
        Messages, services and actions used by FlexBE Synthesis demo 
    </description>
    <maintainer email="robotics@cnu.edu">David Conner</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>action_msgs</depend>
    <depend>std_msgs</depend>
    <depend>flexbe_msgs</depend>
    <depend>builtin_interfaces</depend>
    <depend>rosidl_default_generators</depend>
    <depend>rosidl_default_runtime</depend>

    <test_depend>ament_lint_common</test_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
