<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>flexbe_synthesis_demo_visualization</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="robotics@cnu.edu">neec23</maintainer>
    <license>TODO: License declaration</license>

    <depend>rclpy</depend>
    <depend>flexbe_msgs</depend>
    <depend>flexbe_core</depend>
    <depend>flexbe_testing</depend>
    <depend>flexbe_synthesis_demo_msgs</depend>
    <depend>python3-pygame</depend>
 
    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
